--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,9 @@
 
     <link href="css/style.css" rel="stylesheet" />
     
+    <script src="./js/spark-md5.min.js"></script>
     <script src="./js/controllers.js"></script>
     <script src="./js/app.js"></script>
-
 
     <link rel="import" href="bower_components/video-tagging/video-tagging.html">
 
